# albedo

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/albedo_backend/: Cargo.toml
crates/albedo_backend/src/: bind_group.rs  buffer.rs  compute_pass.rs  lib.rs  primitive.rs  render_pipeline.rs  shader_bindings.rs
crates/albedo_backend/src/data/: interleaved_vec.rs  mod.rs  packing.rs  shader_preprocessor.rs  slice.rs  strided_slice.rs
crates/albedo_backend/src/gpu/: bind_group.rs  buffer.rs  mod.rs  pipeline.rs  primitive.rs  queries.rs  render_pipeline.rs  resource.rs  shader_bindings.rs  texture.rs  texture_atlas.rs  textures.rs  vertex_buffer.rs
crates/albedo_backend/src/mesh/: attribute.rs  mod.rs  primitive.rs
crates/albedo_backend/src/mesh/shapes/: mod.rs
crates/albedo_bvh/: Cargo.toml
crates/albedo_bvh/src/: blas.rs  bvh.rs  lib.rs  mesh.rs  sah_bvh_builder.rs
crates/albedo_bvh/src/builders/: mod.rs  sah_bvh_builder.rs
crates/albedo_lightmapper_native/: Cargo.toml
crates/albedo_lightmapper_native/ffi/albedo/: albedo_lightmapper.h
crates/albedo_lightmapper_native/src/: app.rs  baker.rs  context.rs  lib.rs
crates/albedo_math/: Cargo.toml
crates/albedo_math/src/: aabb.rs  lib.rs
crates/albedo_rtx/: Cargo.toml  README.md  build.rs  compile.sh
crates/albedo_rtx/shaders/: accumulation-pingpong.comp  atrous.comp  blitting-texture.frag  blitting.frag  compositing.comp  gbuffer.comp  intersection.comp  lightmap.frag  lightmap.vert  ray_generation.comp  shading.comp  temporal-accumulation.comp
crates/albedo_rtx/shaders/imports/: common.glsl  intersection_utils.glsl  math.glsl  packing.glsl  sampling.glsl  structures.glsl  texture_utils.glsl
crates/albedo_rtx/src/: blas.rs  layouts.rs  lib.rs  macros.rs  mesh.rs  scene.rs  uniforms.rs
crates/albedo_rtx/src/accel/: bvh.rs  mod.rs  sah-bvh-builder.rs  sah_bvh_builder.rs  tlas.rs
crates/albedo_rtx/src/bvh/: lib.rs
crates/albedo_rtx/src/command/: mod.rs
crates/albedo_rtx/src/intersector/: intersector.rs  mod.rs
crates/albedo_rtx/src/passes/: a_trous.rs  accumulation.rs  ao.rs  atrous.rs  blit_pass.rs  blit_texture_pass.rs  debug_bvh_pass.rs  g_buffer.rs  intersector.rs  lightmap.rs  mod.rs  radiance_estimator.rs  ray.rs  ray_generator.rs  shading.rs  temporal_accumulation.rs
crates/albedo_rtx/src/passes/denoise/: composite.rs  mod.rs
crates/albedo_rtx/src/renderer/: blit_pass.rs  commands.rs  mod.rs  resources.rs  utils.rs
crates/albedo_rtx/src/shaders/: accumulation.comp  accumulation.comp.spv  accumulation_pingpong.comp  ao.comp  ao.frag  asvgf.comp  atrous.comp  blitting-texture.frag  blitting.frag  blitting.frag.spv  blitting.vert  blitting.vert.spv  debug_bvh.comp  debug_bvh.comp.spv  gbuffer.comp  intersection.comp  intersection.comp.spv  lightmap.frag  lightmap.vert  mod.rs  pathtrace.comp  pathtrace.comp.spv  ray_generation.comp  ray_generation.comp.spv  scene.glsl  shading.comp  shading.comp.spv  structures.comp  structures.glsl  temporal-accumulation.comp
crates/albedo_rtx/src/shaders/spirv/: accumulation.comp.spv  accumulation_pingpong.comp.spv  ao.comp.spv  ao.frag.spv  asvgf.comp.spv  atrous.comp.spv  blitting-texture.frag.spv  blitting.frag.spv  blitting.vert.spv  debug_bvh.comp.spv  gbuffer.comp.spv  intersection.comp.spv  lightmap.frag.spv  lightmap.vert.spv  ray_generation.comp.spv  shading.comp.spv  temporal-accumulation.comp.spv
crates/albedo_rtx/src/shaders/utils/: colorspace.comp  colorspace.glsl  common.comp  common.glsl  intersection_utils.comp  intersection_utils.glsl  materials.glsl  math.glsl  sampling.comp  texture_utils.comp
crates/albedo_rtx/src/shaders/utils/bsdf/: ue4.comp
crates/albedo_rtx/src/texture/: mod.rs  texture_atlas.rs
examples/: example.rs
examples/example/: async_exec.rs  meshes.rs  mod.rs
examples/gpu_intersector/: camera.rs  gltf_loader.rs  main.rs
examples/gpu_intersector/assets/: cornell-box.glb
examples/gpu_picking/: Cargo.toml  README.md  main.rs  shader.wgsl
examples/pathtracing/: gltf_loader.rs  main.rs
