[package]
name = "albedo"
version = "0.0.1-beta.0"
edition = "2018"
authors = ["David Peicho <david.peicho@gmail.com>"]
categories = ["graphics"]
description = "Data-driven graphics library for real-time visualization"
keywords = ["graphics", "rendering", "raytracing", "albedo"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/albedo-engine/albedo"
exclude = ["assets/**/*", ".github/**/*", "crates/**/*"]
resolver = "2"

[workspace]
members = ["crates/*"]

[dev-dependencies]
image = {version = "0.23", default-features = false, features = ["hdr"]}
winit = { version = "0.25", features = ["web-sys"] }
enumflags2 = "0.7.1"
wgpu = "0.11.0"
glam = "0.11.2"
gltf = "0.15.2"
pollster = "0.2"

[[example]]
name = "ray_intersection_bvh"
path = "examples/ray_intersection_bvh/main.rs"
