[package]
name = "albedo_backend"
version = "0.0.1-beta.0"
edition = "2018"
authors = ["David Peicho <david.peicho@gmail.com>"]
description = "Provides GPU backend utils for the albedo components"
repository = "https://github.com/albedo-engine/albedo"
license = "MIT"
keywords = ["rendering", "graphics", "wgpu" ]

[dependencies]
bytemuck = { workspace = true }
wgpu = { workspace = true }
pas = { workspace = true }
rust-embed = "8"
