[package]
name = "albedo_bvh"
version = "0.0.1-beta.0"
edition = "2018"
authors = ["David Peicho <david.peicho@gmail.com>"]
description = "Provides Bounding Volume Hierachy utilities"
repository = "https://github.com/albedo-engine/albedo"
license = "MIT"
keywords = ["bvh", "graphics", "intersection", "triangle" ]

[dependencies]
bytemuck = { version = "1.7.2", features = ["derive"] }
glam = { version = "0.20.2", features = ["bytemuck"] }
albedo_math = { path = "../albedo_math", version = "0.0.1-beta.0" }
