[package]
name = "albedo_bvh"
version = "0.0.1-beta.0"
edition = "2018"
authors = ["David Peicho <david.peicho@gmail.com>"]
description = "Provides Bounding Volume Hierachy utilities"
repository = "https://github.com/albedo-engine/albedo"
license = "MIT"
keywords = ["bvh", "graphics", "intersection", "triangle" ]

[dependencies]
albedo_backend = { path = "../albedo_backend", version = "0.0.1-beta.0" }
albedo_math = { path = "../albedo_math", version = "0.0.1-beta.0" }
bytemuck = { workspace = true }
glam = { version = "0.20.2", features = ["bytemuck"] }
pas = { version = "0.1.0"}
