[package]
name = "albedo_lightmapper_native"
version = "0.0.1-beta.0"
edition = "2018"
authors = ["David Peicho <david.peicho@gmail.com>"]
description = "Provides raytracing capabilities"
repository = "https://github.com/albedo-engine/albedo"
license = "MIT"
keywords = ["lightmapper", "raytracing", "graphics"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
libc = "*"
wgpu = "0.15.0"
futures = "0.3"
albedo_backend = { path = "../albedo_backend" }
albedo_bvh = { path = "../albedo_bvh" }
albedo_rtx = { path = "../albedo_rtx" }
