[package]
name = "albedo_math"
version = "0.0.1-beta.0"
edition = "2018"
authors = ["David Peicho <david.peicho@gmail.com>"]
description = "Provides math utils for the albedo components"
repository = "https://github.com/albedo-engine/albedo"
license = "MIT"
keywords = ["raytracing", "graphics" ]

[dependencies]
glam = "0.11.2"
