[package]
name = "albedo_rtx"
version = "0.0.1-beta.0"
edition = "2018"
authors = ["David Peicho <david.peicho@gmail.com>"]
description = "Provides raytracing capabilities"
repository = "https://github.com/albedo-engine/albedo"
license = "MIT"
keywords = ["raytracing", "graphics" ]

[dependencies]
bytemuck = "1.4.1"
glam = "0.11.2"
wgpu = { version = "0.11.0", features = ["spirv"] }
albedo_backend = { path = "../albedo_backend", version = "0.0.1-beta.0" }
albedo_math = { path = "../albedo_math", version = "0.0.1-beta.0" }
