[package]
name = "albedo_rtx"
version = "0.0.1-beta.0"
edition = "2018"
authors = ["David Peicho <david.peicho@gmail.com>"]
description = "Provides raytracing capabilities"
repository = "https://github.com/albedo-engine/albedo"
license = "MIT"
keywords = ["raytracing", "graphics" ]

[features]
accumulate_read_write = []

[dependencies]
albedo_backend = { path = "../albedo_backend", version = "0.0.1-beta.0" }
albedo_bvh = { path = "../albedo_bvh", version = "0.0.1-beta.0" }
albedo_math = { path = "../albedo_math", version = "0.0.1-beta.0" }
bytemuck = { workspace = true }
glam = "0.20.2"
guillotiere = "0.6.2"
wgpu = { workspace = true }
